11.apr (ws)
      - add "Search" to edit menu
      - dont extend top/bottom ledger line for chords with displaced note heads
        (layout enhancement)
      - fix displaced notehead (visible in italian-1.mscx bar 34)
      (la)
      - enable paste of chord names on rest
      - fix export of dominant chord in musicXML
10.apr (ws)
      - reduce stem len of beamed grace notes
      - fix: ties do not work via note entry with mouse
      - pitch up/down for drum does not change pitch but change to next/prev
        instrument in drumset
      - disable dragging of drum note heads
      - fix: freeze when double click in drum palette
9.apr (ws)
      - fix shortcut for flat
8.apr (ws)
      - fix problem with special characters(&<>\") in filename for compressed files
      - make changing of playback instrument undoable, this also sets the dirty
        flag for the score to ensure the changed score is saved
      (tb)
      - update Portuguese translation and instruments by José Luciano Batista Gomes
      - update Dutch translation by Jaap Plaisier
7.apr (ws)
      - added two new clefs, reordered clef list
      - make saved files readable by all
      - forgot to update ppitch in Note() when changing accidental
6.apr (ws)
      - fix improper vertical note alignment for whole note chords
      - fix ledger line len for chords with displaced note heads
      - more translatable text (symbol names, element names and more)
      (tb)
      - first commit of Norwegian translation by daghenningsorbo
5.apr (ws)
      - import midi: copyright text
      - midi import fixes
      - midi implementation of simple dynamics
      - fix regression: pasted noted do not playback
      - fix regression: editing of chord names
4.apr (lv)
      - MusicXML handling of meta-data
      (ws)
      - add accidental-note distance and accidental-accidental distance to style
      - reworked accidental layout; better algorithm for accidentals at chords